--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nework-app",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "unofficial nework app using electron",
   "main": "src/index.js",
   "dependencies": {},
@@ -9,7 +9,7 @@
     "electron-packager": "^15.1.0"
   },
   "scripts": {
-    "start": "electron ./src",
+    "start": "NODE_ENV=development electron ./src",
     "build-macOS": "electron-packager ./src nework-kaeru --platform=darwin --arch=x64 --overwrite --icon=./src/assets/nework-kaeru.icns",
     "build-windows": "electron-packager ./src nework-kaeru --platform=win32 --arch=x64 --overwrite --icon=./src/assets/icon_256x256.ico",
     "test": "echo \"Error: no test specified\" && exit 1"
